use consistent capitalization

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
 
         <span>
             <button id="logOut" class="hidden">Log Out</button>
-            <button id="save">Save server data</button>
+            <button id="save">Save Server Data</button>
         </span>
     </header>
 
@@ -54,14 +54,14 @@
                 </form>
                 <span>
                     or
-                    <button id="signup" class="big">Create a new account</button>
+                    <button id="signup" class="big">Create a New Account</button>
                 </span>
             </div>
 
             <div class="stretch-vertical">
                 <h2>Saved Campaigns</h2>
                 <div id="gamesContainer">
-                    <button id="create" class="big acc-enable smooth" disabled>Create new campaign</button>
+                    <button id="create" class="big acc-enable smooth" disabled>Create New Campaign</button>
                 </div>
             </div>
 
@@ -124,7 +124,7 @@
                 <div id="sceneEditor" class="controls panel dm edit-only">
                     <h3>Scene Editor</h3>
                     <button id="changeImage" class="icon">
-                        Change scene image
+                        Change Scene Image
                         <i class="fas fa-image"></i>
                     </button>
                     <div id="gridControls">
@@ -143,21 +143,21 @@
                         </span>
                     </div>
                     <button id="exitEdit" class="icon big">
-                        Save changes
+                        Save Changes
                         <i class="fas fa-save"></i>
                     </button>
                 </div>
                 <div id="rightControls" class="dm no-edit">
                     <div id="prefabPalette" class="controls panel panning-only">
-                        <h3>Prefab Palette</h3>
+                        <h3>Token Palette</h3>
                         <div class="prefab-selection">
                             <p>Players</p>
                             <div id="pcPrefabs" class="prefab-container"></div>
-                            <p>Others</p>
+                            <p>Custom</p>
                             <div id="otherPrefabs" class="prefab-container">
                                 <button id="addPrefab" class="icon with-tooltip">
                                     <i class="fas fa-plus"></i>
-                                    <span>Add prefab</span>
+                                    <span>Add Prefab</span>
                                 </button>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                             </span>
                             <span id="prefabAccessSpan">Access:</span>
                             <ul id="prefabAccess"></ul>
-                            <button id="prefabRemove" class="bad">Remove from campaign</button>
+                            <button id="prefabRemove" class="bad">Remove From Campaign</button>
                         </div>
                     </div>
                     <div id="selectionProperties" class="controls panel hidden">
@@ -192,7 +192,7 @@
                             <a>Clear all</a>
                         </span>
                         <div id="conds"></div>
-                        <button id="movableRemove" class="bad compact">Remove from scene</button>
+                        <button id="movableRemove" class="bad compact">Remove From Scene</button>
                     </div>
                 </div>
                 <div id="sceneSelector" class="controls panel dm hooked no-edit panning-only">
@@ -204,7 +204,7 @@
                         </div>
                     </span>
                     <div id="scenes">
-                        <button id="addScene" class="big">Add scene</button>
+                        <button id="addScene" class="big">Add Scene</button>
                     </div>
                 </div>
                 <div id="board">
@@ -268,7 +268,7 @@
                         </button>
                         <button class="icon navigate with-tooltip">
                             <i class="fas fa-chevron-right"></i>
-                            <span>Create new map</span>
+                            <span>Create New Map</span>
                         </button>
                     </span>
                     <div id="maps"></div>
@@ -288,7 +288,7 @@
                             </button>
                             <button class="icon dm" mode="pin">
                                 <i class="fas fa-street-view"></i>
-                                <span>Player pin</span>
+                                <span>Player Pin</span>
                             </button>
                         </div>
 
@@ -306,11 +306,11 @@
                         <div class="dm">
                             <button class="icon" action="change">
                                 <i class="fas fa-image"></i>
-                                <span>Change image</span>
+                                <span>Change Image</span>
                             </button>
                             <button class="icon" action="clear">
                                 <i class="fas fa-tint-slash"></i>
-                                <span>Clear map</span>
+                                <span>Clear Map</span>
                             </button>
                         </div>
 
@@ -318,21 +318,21 @@
 
                         <button class="icon" id="infoShow">
                             <i class="fas fa-question-circle"></i>
-                            <span>Show tool info</span>
+                            <span>Show Tool Info</span>
                         </button>
 
                         <input type="color" id="activeColor">
                     </div>
                     <button class="icon" type="reset">
-                        Exit map view
+                        Exit Map View
                         <i class="fas fa-arrow-left"></i>
                     </button>
                     <button class="icon dm needs-map hidden with-tooltip" id="mapDelete">
                         <i class="fas fa-trash"></i>
-                        <span>Remove this map</span>
+                        <span>Remove This Map</span>
                     </button>
                     <button class="icon dm" id="changeMap">
-                        Create map
+                        Create Map
                         <i class="fas fa-image"></i>
                     </button>
                 </div>
@@ -397,13 +397,13 @@
                     grid.
                 </p>
                 <div id="startingScene" class="edit-img">
-                    <div>Upload image</div>
+                    <div>Upload Image</div>
                     <img>
                 </div>
             </div>
 
-            <button id="save" class="big">Save changes</button>
-            <button id="delete" class="bad">Delete campaign</button>
+            <button id="save" class="big">Save Changes</button>
+            <button id="delete" class="bad">Delete Campaign</button>
         </div>
 
         <div class="panel" id="uploadPanel">
@@ -427,12 +427,12 @@
 
                 <canvas></canvas>
                 <img>
-                <span id="dragText">Drag & drop file here</span>
+                <span id="dragText">Drag & Drop File Here</span>
             </div>
 
             <span>
                 <label class="file-upload">
-                    Open file
+                    Open File
                     <input id="imgUpload" type="file" accept="image/*">
                 </label>
                 <button class="big" type="submit">Upload</button>
@@ -504,7 +504,7 @@
         </div>
 
         <div class="panel" id="resetPanel">
-            <h2>Reset password</h2>
+            <h2>Reset Password</h2>
             <button class="close">
                 <i class="fas fa-times"></i>
             </button>
