introduced icon wall on home page

--- a/web/index.html
+++ b/web/index.html
@@ -73,6 +73,7 @@
                     Privacy Policy
                 </a>
             </footer>
+            <div id="iconWall"></div>
         </section>
 
         <section id="session">
