Initiative Tracker first steps

--- a/web/index.html
+++ b/web/index.html
@@ -99,6 +99,14 @@
                         Map View
                         <i class="fas fa-map"></i>
                     </button>
+                    <button class="icon dm" id="initiativeTracker">
+                        Initiative Tracker
+                        <i class="fas fa-sort-numeric-up-alt"></i>
+                    </button>
+                </div>
+                <div id="initiativeRoll">
+                    <p class="initiativeMod">Add your Initiative modifier here: <input type="number" id = "initiativeMod"></p>
+                    <button class="initiativeRollButton"></button>
                 </div>
                 <div id="sceneEditor" class="controls panel dm edit-only">
                     <h3>Scene Editor</h3>
