Initiative is forced to roll at button click. Result is given to only the roller in Chatbox

--- a/web/index.html
+++ b/web/index.html
@@ -126,10 +126,6 @@
                         <i class="fas fa-sort-numeric-up-alt"></i>
                     </button>
                 </div>
-                <div id="initiativeRoll">
-                    <p class="initiativeMod">Add your Initiative modifier here: <input type="number" id = "initiativeMod"></p>
-                    <button class="initiativeRollButton"></button>
-                </div>
                 <div id="sceneEditor" class="controls panel dm edit-only">
                     <h3>Scene Editor</h3>
                     <button id="changeImage" class="icon">
@@ -380,6 +376,12 @@
             </div>
         </div>
 
+        <div id="initiativeRoll" class="panel">
+            <p class="initiativeMod">Initiative Modifier: <input type="number" id = "initiativeMod"></p>
+            <button class="initiativeRollButton">
+                <i class="fas fa-dice-d20"></i>
+            </button>
+        </div>
         <div class="panel" id="editGamePanel">
             <h2>Campaign Settings</h2>
             <button class="close">
