warn DM if current scene is not the active scene

--- a/web/index.html
+++ b/web/index.html
@@ -257,6 +257,10 @@
                         </svg>
                     </div>
                 </div>
+                <span id="inactiveSceneWarning" class="hidden">
+                    Your players are <b>not looking at this scene</b> at the moment.
+                    <br>Click here to move them!
+                </span>
                 <div id="map">
                     <span>
                         <button class="icon navigate">
