Initiative Bar shows in Center of Board with pictures of the Characters from left to right

--- a/web/index.html
+++ b/web/index.html
@@ -78,6 +78,8 @@
 
         <section id="session">
             <div id="boardContainer">
+                <div class="controls" id="initiativeBar">
+                </div>
                 <div id="playerControls" class="controls no-edit">
                     <button class="icon dm" id="editScene">
                         Edit Scene
