introduced icon for labeled tokens

--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="icon" type="image/png" sizes="128x128" href="sass/icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="sass/icon32.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="images/icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icon32.png">
     <title>D&D Interactive</title>
     <script defer src="main.dart.js"></script>
     <script src="https://kit.fontawesome.com/a3de05bb60.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
 <body class="dark-mode">
     <header>
         <a href="/" class="title">
-            <div><img src="sass/icon.png"></div>
+            <div><img src="images/icon.png"></div>
             <h1>D&D Interactive</h1>
         </a>
 
@@ -158,7 +158,7 @@
                             <div id="otherPrefabs" class="prefab-container">
                                 <button id="addPrefab" class="icon with-tooltip">
                                     <i class="fas fa-plus"></i>
-                                    <span>Add Prefab</span>
+                                    <span>Add Token</span>
                                 </button>
                             </div>
                         </div>
@@ -169,6 +169,7 @@
                                 <div>Change</div>
                                 <img>
                             </div>
+                            <i id="emptyIcon"></i>
                             <span>Name:
                                 <input id="prefabName" type="text">
                             </span>
