fixed campaign settings char grid sizing

--- a/web/index.html
+++ b/web/index.html
@@ -390,10 +390,9 @@
             <div>
                 <span>
                     <h3>Playable Characters</h3>
-                    <a id="addChar">New character</a>
+                    <a id="addChar">New Character</a>
                 </span>
-                <div id="editChars">
-                </div>
+                <div id="editChars"></div>
             </div>
 
             <div class="on-prepare">
