display welcome message on login

--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,8 @@
 
     <div id="content">
         <section id="home">
+            <span id="loginText">You're now logged in!</span>
+
             <div id="loginTab" class="hidden">
                 <h1>Sign in to D&D Interactive</h1>
 
