removed redundant placeholder image

--- a/web/index.html
+++ b/web/index.html
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <div id="board">
-                    <img id="ground" src="https://via.placeholder.com/500">
+                    <img id="ground">
                     <svg id="gridCanvas" class="fill-board">
                         <defs>
                             <pattern id="gridPattern" width="80" height="80" patternUnits="userSpaceOnUse">
