added more links to footer

--- a/web/index.html
+++ b/web/index.html
@@ -68,12 +68,37 @@
             </div>
 
             <footer>
-                <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
-                    Source Code
-                </a>
-                <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
-                    Privacy Policy
-                </a>
+                <div style="justify-content: start">
+                    Hosted at Theoretically Online
+                </div>
+                <div style="justify-content: center; width: 100%">
+                    <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
+                        Source Code
+                    </a>
+                    <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
+                        Privacy Policy
+                    </a>
+                    <a href="https://ko-fi.com/doodlezucc" target="_blank" rel="noopener noreferrer">
+                        Buy Me a Coffee
+                    </a>
+                </div>
+                <div style="justify-content: flex-end">
+                    <a href="https://ko-fi.com/doodlezucc" class="icon with-tooltip" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fas fa-coffee"></i>
+                        <span>Donate on Ko-fi</span>
+                    </a>
+                    <a href="https://github.com/doodlezucc" class="icon with-tooltip" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fab fa-github"></i>
+                        <span>More Code on Github</span>
+                    </a>
+                    <a href="mailto:theoretically.online@gmail.com" class="icon with-tooltip" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fas fa-envelope"></i>
+                        <span>Write a Mail</span>
+                    </a>
+                </div>
             </footer>
             <div id="iconWall"></div>
         </section>
