introduced privacy policy

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" type="image/png" sizes="128x128" href="images/icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/icon32.png">
@@ -23,7 +22,7 @@
 
         <span>
             <button id="logOut" class="hidden">Log Out</button>
-            <button id="save">Save Server Data</button>
+            <button id="save" style="display: none;">Save Server Data</button>
         </span>
     </header>
 
@@ -75,9 +74,7 @@
                     <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
                         Source Code
                     </a>
-                    <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
-                        Privacy Policy
-                    </a>
+                    <a href="privacy">Privacy Policy</a>
                     <a href="https://ko-fi.com/doodlezucc" target="_blank" rel="noopener noreferrer">
                         Buy Me a Coffee
                     </a>
