added "remember me" checkbox

--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,13 @@
                         </span>
                         <input type="password" autocomplete="current-password" id="loginPassword">
                     </div>
+                    <div id="rememberMe">
+                        <label class="with-tooltip">
+                            <input type="checkbox">
+                            Remember me
+                            <span>Save a cookie on your machine to stay logged in.</span>
+                        </label>
+                    </div>
                     <p id="loginError" class="bad"></p>
                     <button id="login" class="big">Log In</button>
                 </form>
