--- a/web/index.html
+++ b/web/index.html
@@ -293,7 +293,7 @@
                     Your players are <b>not looking at this scene</b> at the moment.
                     <br>Click here to move them!
                 </span>
-                <span id="tooltip">Cool tooltip :) bro :) :)</span>
+                <span id="tooltip"></span>
                 <div id="map">
                     <span>
                         <button class="icon navigate">
