cancel session joining

--- a/web/index.html
+++ b/web/index.html
@@ -394,6 +394,9 @@
     <div id="overlay">
         <div class="panel" id="joinPanel">
             <h2>Join Session</h2>
+            <button class="close">
+                <i class="fas fa-times"></i>
+            </button>
 
             <p>
                 You're invited to join this session! Enter your name so the Dungeon Master can assign you the right
