send feedback bactches in intervals

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
 
         <span>
             <button id="logOut" class="hidden">Log Out</button>
-            <button id="feedback">Send Feedback</button>
+            <button id="feedback">Feedback</button>
             <button id="save" style="display: none;">Save Server Data</button>
         </span>
     </header>
