send game id with feedback

--- a/web/index.html
+++ b/web/index.html
@@ -420,9 +420,9 @@
             </button>
 
             <select>
-                <option value="feature">Request a feature</option>
                 <option value="bug">Report a bug</option>
-                <option value="account">Remove account</option>
+                <option value="feature">Request a feature</option>
+                <option value="account">Request changes to your account</option>
                 <option value="other">Other</option>
             </select>
 
