updated privacy policy

--- a/web/privacy.html
+++ b/web/privacy.html
@@ -36,8 +36,10 @@
             other data protection regulations is:
         </p>
         <p>
-            D&D Interactive<br>
-            [insert address]<br>
+            Theo Wiese<br>
+            Postnumber 1019768467<br>
+            PO Box 105<br>
+            72072 Tübingen<br>
             <br>
             E-mail: <a href="mailto:theoretically.online@gmail.com">theoretically.online@gmail.com</a><br>
             <br>
@@ -202,34 +204,27 @@
         <h3>Contacting Us</h3>
         <p>
             When contacting us, the user's details are processed for the purpose of processing the enquiry and handling
-            it
-            in accordance with Art. 6 para. 1 lit. b) GDPR or in accordance with the consent given by the user in
-            accordance
-            with Art. 6 para. 1 lit. a) GDPR. The user's details may be stored in our systems.
+            it in accordance with Art. 6 para. 1 lit. b) GDPR or in accordance with the consent given by the user in
+            accordance with Art. 6 para. 1 lit. a) GDPR. The user's details may be stored in our systems.
         </p>
         <p>
             We delete the information if it is no longer required. We review the necessity every two years; we store
             requests from users who have a customer account permanently and refer to the above information under
-            "Provision
-            of contractual services" on the customer account for deletion. In the case of legal archiving obligations,
-            deletion takes place after the expiry of the respective legally prescribed periods.
+            "Provision of contractual services" on the customer account for deletion. In the case of legal archiving
+            obligations, deletion takes place after the expiry of the respective legally prescribed periods.
         </p>
 
         <h3>Collection of access data and log files</h3>
         <p>
             We collect data on every access to our website on the basis of our legitimate interests as defined in Art. 6
             para. 1 lit. f. GDPR, we collect data on every access to the server on which this service is located
-            (so-called
-            server log files). The access data includes the date and time of access, the page accessed, the browser type
-            and
-            version, the user's operating system, any error data, the user ID (internal customer number) and the
-            requesting
-            provider.
+            (so-called server log files). The access data includes the date and time of access, the page accessed, the
+            browser type and version, the user's operating system, any error data, the user ID (internal customer
+            number) and the requesting provider.
         </p>
         <p>
             Log file information is stored for security reasons (e.g. for the verification of errors and troubleshooting
-            or
-            for the clarification of acts of abuse or fraud) for as long as it is necessary for the fulfilment of its
+            or for the clarification of acts of abuse or fraud) for as long as it is necessary for the fulfilment of its
             purpose and then deleted or anonymised. Data whose further storage is required for evidentiary purposes is
             exempt from deletion until the respective incident has been finally clarified.
         </p>
@@ -238,9 +233,8 @@
         <p>
             D&D Interactive and our services are intended exclusively for adults. We do not knowingly collect
             age-identifying information, nor do we knowingly collect personal information from children under the age of
-            13.
-            We remind all users under the age of 13 not to disclose or provide any personally identifiable information
-            through our service.
+            13. We remind all users under the age of 13 not to disclose or provide any personally identifiable
+            information through our service.
         </p>
 
         <h3>Changes and updates to the privacy policy</h3>
