DM dice roll visibility

--- a/web/index.html
+++ b/web/index.html
@@ -119,6 +119,9 @@
                         Roll Dice
                         <i class="fas fa-dice-d20"></i>
                         <div class="content">
+                            <span class="with-tooltip icon dm">
+                                Visibility<i></i><span></span>
+                            </span>
                             <table id="dice"></table>
                         </div>
                     </button>
