--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,7 @@
         <section id="session">
             <div id="boardContainer">
                 <div id="initiativeBar" class="controls panel hidden no-edit">
-                    <span>uhm hell ye</span>
+                    <span>Initiative Tracker</span>
                     <div class="roster"></div>
                 </div>
                 <div id="playerControls" class="controls no-edit">
@@ -452,7 +452,8 @@
 
         <div class="panel" id="initiativePanel">
             <p>Initiative Modifier: <input type="number" id="initiativeMod" value="0"></p>
-            <button id="initiativeRoll">
+            <button id="initiativeRoll" class="icon">
+                Roll for Initiative
                 <i class="fas fa-dice-d20"></i>
             </button>
         </div>
