give DM control over initiative modifier

--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,6 @@
         <section id="session">
             <div id="boardContainer">
                 <div id="initiativeBar" class="controls panel hidden no-edit">
-                    <span>Initiative Tracker</span>
                     <div class="roster"></div>
                 </div>
                 <div id="playerControls" class="controls no-edit">
@@ -451,7 +450,7 @@
         </div>
 
         <div class="panel" id="initiativePanel">
-            <p>Initiative Modifier: <input type="number" id="initiativeMod" value="0"></p>
+            <span id="initiativeDice"></span>
             <button id="initiativeRoll" class="icon">
                 Roll for Initiative
                 <i class="fas fa-dice-d20"></i>
