--- a/web/index.html
+++ b/web/index.html
@@ -450,6 +450,7 @@
         </div>
 
         <div class="panel" id="initiativePanel">
+            <span id="initiativeTarget"></span>
             <span id="initiativeDice"></span>
             <button id="initiativeRoll" class="icon">
                 Roll for Initiative
