DM may choose to skip creature initiative

--- a/web/index.html
+++ b/web/index.html
@@ -452,10 +452,15 @@
         <div class="panel" id="initiativePanel">
             <span id="initiativeTarget"></span>
             <span id="initiativeDice"></span>
-            <button id="initiativeRoll" class="icon">
-                Roll for Initiative
-                <i class="fas fa-dice-d20"></i>
-            </button>
+            <span>
+                <button id="initiativeRoll" class="icon">
+                    Roll for Initiative
+                    <i class="fas fa-dice-d20"></i>
+                </button>
+                <button id="initiativeSkip" class="hidden">
+                    Skip Creature
+                </button>
+            </span>
         </div>
 
         <div class="panel" id="editGamePanel">
