--- a/web/index.html
+++ b/web/index.html
@@ -231,6 +231,9 @@
                             <input id="movableSize" type="number" min="0" max="25" placeholder="Size...">
                             <span id="sizeInherit">(inherit from prefab)</span>
                         </span>
+                        <span>Aura Radius:
+                            <input id="movableAura" type="number" min="0" max="25" placeholder="Radius...">
+                        </span>
                         <span class="space-between">
                             Conditions
                             <a>Clear all</a>
