fixed token image refactorings

--- a/web/index.html
+++ b/web/index.html
@@ -265,7 +265,9 @@
                         <rect fill="url(#gridPattern)"></rect>
                     </svg>
                     <div id="grid">
-                        <div id="movableGhost" class="movable"></div>
+                        <div id="movableGhost" class="movable">
+                            <div class="img"></div>
+                        </div>
                     </div>
                     <svg id="distanceCanvas" class="fill-board"></svg>
 
