presenting features on the home page

--- a/web/index.html
+++ b/web/index.html
@@ -67,16 +67,80 @@
                 </span>
             </div>
 
-            <div class="stretch-vertical">
+            <div>
                 <h2>Saved Campaigns</h2>
                 <div id="gamesContainer">
                     <button id="create" class="big acc-enable smooth" disabled>Create New Campaign</button>
                 </div>
             </div>
 
+            <div id="features">
+                <h1>Fully-Fledged Features</h1>
+
+                <div>
+                    <div class="info">
+                        <h2>Token Managing</h2>
+                        <p>Set up your own <b>palette of tokens</b>. Every added token has a customizable default
+                            size and list of owners.</p>
+                        <p>Drag tokens into the scene to move and <b>fintune them individually</b>. A set of condition
+                            icons can be applied to keep track of a creature's state.</p>
+                        <img src="images/conditions.png">
+                    </div>
+                    <div class="media">
+                        <video src="videos/tokens.mp4" muted autoplay loop></video>
+                    </div>
+                </div>
+                <div>
+                    <div class="media">
+                        <video src="videos/aoe.mp4" muted autoplay loop></video>
+                    </div>
+                    <div class="info">
+                        <h2>Area of Effect</h2>
+                        <p>Visualize your <b>spellcasting area</b> in whatever shape you need. Areas are calculated in
+                            the most common way and generally follow the DMG.</p>
+                        <p>All measurements are <b>shared live with other campaign members</b>. You can identify the
+                            player by their game-assigned color.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="info">
+                        <h2>Fog of War</h2>
+                        <p>When planning out a large dungeon, you may not want your players to know what evil creatures
+                            lie ahead of them. By using the Fog of War tool, you can effectively
+                            <b>hide areas of a scene</b>.
+                        </p>
+                        <p>Drawn areas are automatically united and merged into bigger ones, which also allows
+                            you to easily <b>carve holes</b>.</p>
+                        <p>The battle map shown here was randomly generated using
+                            <a href="https://dungen.app/dungen/" target="_blank" rel="noopener noreferrer">DunGen</a>.
+                        </p>
+                    </div>
+                    <div class="media">
+                        <video src="videos/fow.mp4" muted autoplay loop></video>
+                    </div>
+                </div>
+                <div>
+                    <div class="media">
+                        <video src="videos/map.mp4" muted autoplay loop></video>
+                    </div>
+                    <div class="info">
+                        <h2>Map View</h2>
+                        <p>Show your players the paths they've traveled and <b>where they are currently heading</b> on a
+                            map.</p>
+                        <p>You can upload multiple maps of varying scale to your campaign. Texts and strokes of a map
+                            are <b>updated live</b> for all campaign members.</p>
+                        <p>The world map shown here was randomly generated using
+                            <a href="https://azgaar.github.io/Fantasy-Map-Generator/" target="_blank"
+                                rel="noopener noreferrer">
+                                azgaar's Fantasy Map Generator</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <footer>
-                <div style="justify-content: start">
-                    Hosted at Theoretically Online
+                <div style="justify-content: start; gap: 4px">
+                    Hosted at <a href="https://theoretically.online">Theoretically Online</a>
                 </div>
                 <div style="justify-content: center; width: 100%">
                     <a href="https://github.com/doodlezucc/dnd_interactive" target="_blank" rel="noopener noreferrer">
