mobile screen responsive home page

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/a3de05bb60.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="dark-mode">
+<body>
     <header>
         <a href="/" class="title">
             <div><img src="images/icon.png"></div>
@@ -90,16 +90,16 @@
                         <video src="videos/tokens.mp4" muted autoplay loop></video>
                     </div>
                 </div>
-                <div>
-                    <div class="media">
-                        <video src="videos/aoe.mp4" muted autoplay loop></video>
-                    </div>
+                <div style="flex-direction: row-reverse;">
                     <div class="info">
                         <h2>Area of Effect</h2>
                         <p>Visualize your <b>spellcasting area</b> in whatever shape you need. Areas are calculated in
                             the most common way and generally follow the DMG.</p>
                         <p>All measurements are <b>shared live with other campaign members</b>. You can identify the
                             player by their game-assigned color.</p>
+                    </div>
+                    <div class="media">
+                        <video src="videos/aoe.mp4" muted autoplay loop></video>
                     </div>
                 </div>
                 <div>
@@ -119,10 +119,7 @@
                         <video src="videos/fow.mp4" muted autoplay loop></video>
                     </div>
                 </div>
-                <div>
-                    <div class="media">
-                        <video src="videos/map.mp4" muted autoplay loop></video>
-                    </div>
+                <div style="flex-direction: row-reverse;">
                     <div class="info">
                         <h2>Map View</h2>
                         <p>Show your players the paths they've traveled and <b>where they are currently heading</b> on a
@@ -134,6 +131,9 @@
                                 rel="noopener noreferrer">
                                 azgaar's Fantasy Map Generator</a>.
                         </p>
+                    </div>
+                    <div class="media">
+                        <video src="videos/map.mp4" muted autoplay loop></video>
                     </div>
                 </div>
             </div>
