hide saved campaigns when there are none

--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@
                 </span>
             </div>
 
-            <div>
+            <div id="savedGames">
                 <h2>Saved Campaigns</h2>
                 <div id="gamesContainer">
                     <button id="create" class="big acc-enable smooth" disabled>Create New Campaign</button>
