added link preview banner

--- a/web/index.html
+++ b/web/index.html
@@ -5,11 +5,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta property="og:title" content="D&D Interactive" />
+    <meta property="twitter:title" content="D&D Interactive" />
+
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://theoretically.online/dnd/images/icon.png" />
+    <meta property="og:image" content="https://theoretically.online/dnd/images/banner.jpg" />
+    <meta property="twitter:image" content="https://theoretically.online/dnd/images/banner.jpg" />
+
     <meta property="og:description" content="Lead campaigns with players all over the world, whenever you want!" />
-    <meta name="description" content="Lead campaigns with players all over the world, whenever you want!" />
+    <meta property="description" content="Lead campaigns with players all over the world, whenever you want!" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="theoretically.online" />
+    <meta property="twitter:url" content="https://theoretically.online/dnd" />
+
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" type="image/png" sizes="128x128" href="images/icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/icon32.png">
